src/objects/FNPL_SFC_Insurance_Pricing__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>FNPL SFC Insurance Pricing File Data</description>
    <fields>
        <fullName>Gross_Premium_Per_Transaction__c</fullName>
        <label>Gross Premium Per Transaction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPT__c</fullName>
        <description>9.5% of Gross Premium Per Transaction</description>
        <inlineHelpText>9.5% of Gross Premium Per Transaction</inlineHelpText>
        <label>IPT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_Sum_Insured_up_to__c</fullName>
        <label>Level of Sum Insured up to</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Premium__c</fullName>
        <label>Total Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>FNPL SFC Insurance Pricing</label>
</CustomObject>